--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -119,23 +119,29 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c68-AJ-1N6">
-                                        <rect key="frame" x="0.0" y="34.333333333333314" width="393" height="582.33333333333348"/>
+                                        <rect key="frame" x="0.0" y="34.333333333333371" width="393" height="562"/>
                                         <color key="backgroundColor" systemColor="systemGray3Color"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Project Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAp-PC-QeS">
-                                        <rect key="frame" x="0.0" y="616.66666666666663" width="393" height="24"/>
+                                        <rect key="frame" x="0.0" y="596.33333333333337" width="393" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PdX-x9-zPw">
-                                        <rect key="frame" x="0.0" y="640.66666666666663" width="393" height="30"/>
+                                        <rect key="frame" x="0.0" y="620.33333333333337" width="393" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="mPX-bx-5fa"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QFt-HE-1cI">
+                                        <rect key="frame" x="0.0" y="650.33333333333337" width="393" height="20.333333333333371"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DoN-na-mnG">
                                         <rect key="frame" x="0.0" y="670.66666666666663" width="393" height="34.333333333333371"/>
                                         <state key="normal" title="Button"/>
@@ -159,6 +165,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Xjd-Wi-PXX"/>
                     <connections>
+                        <outlet property="nameExistsLabel" destination="QFt-HE-1cI" id="a2v-9Q-eHZ"/>
                         <outlet property="projectNameTextField" destination="PdX-x9-zPw" id="QN7-G2-5AM"/>
                         <outlet property="saveProjectButton" destination="DoN-na-mnG" id="SWl-Yy-PfY"/>
                         <outlet property="selectVideoButton" destination="L7S-XZ-5U3" id="bTW-hU-aHW"/>
