--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -19,14 +19,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="project" id="71M-M2-Fer" customClass="ProjectsTableViewCell" customModule="Zedit_UIKit" customModuleProvider="target">
-                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="43.333332061767578"/>
+                                <rect key="frame" x="20" y="55.333332061767578" width="353" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="71M-M2-Fer" id="Kpv-LC-8tS">
-                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43.333332061767578"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHv-zq-cQ6">
-                                            <rect key="frame" x="20" y="10.999999999999998" width="313" height="21.333333333333329"/>
+                                            <rect key="frame" x="20" y="11.000000000000002" width="313" height="21.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -41,7 +41,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameLabel" destination="bHv-zq-cQ6" id="VuT-aU-WfB"/>
-                                    <segue destination="9Lp-0K-qM7" kind="show" identifier="MainView" id="Pil-qu-QoM"/>
+                                    <segue destination="9Lp-0K-qM7" kind="show" identifier="MainView" id="v21-be-TDy"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -65,7 +65,7 @@
         <!--Main Page View Controller-->
         <scene sceneID="JPz-D5-oUQ">
             <objects>
-                <viewController id="9Lp-0K-qM7" customClass="MainPageViewController" customModule="Zedit_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Main Page View Controller" id="9Lp-0K-qM7" customClass="MainPageViewController" customModule="Zedit_UIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Pvm-kM-bS5">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -90,10 +90,31 @@
                                         <buttonConfiguration key="configuration" style="tinted"/>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgf-CK-Ttu">
-                                        <rect key="frame" x="0.0" y="54.666666666666686" width="393" height="660.33333333333326"/>
+                                        <rect key="frame" x="0.0" y="54.666666666666686" width="393" height="550.33333333333326"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="wP6-cX-dja">
+                                        <rect key="frame" x="0.0" y="605" width="393" height="110"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8TF-a7-UDQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="110"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SW6-bM-0KG">
+                                                <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="110"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                <connections>
+                                                    <segue destination="6bo-lV-Rv6" kind="presentation" identifier="Trim" id="HQ6-8U-Jno"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="wP6-cX-dja" firstAttribute="top" secondItem="aw8-qe-mWp" secondAttribute="top" constant="605" id="EfA-4i-AJc"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ReJ-UC-R89"/>
@@ -105,7 +126,10 @@
                             <constraint firstItem="ReJ-UC-R89" firstAttribute="trailing" secondItem="aw8-qe-mWp" secondAttribute="trailing" id="wLe-Yr-qfz"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="ec0-uk-nFi"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="cuY-qa-zKx"/>
+                    <navigationItem key="navigationItem" id="ec0-uk-nFi">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="SyU-jR-ero"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="nameLabel" destination="3qM-9h-HLV" id="Qx2-SW-EcB"/>
                         <outlet property="videoPreviewView" destination="Kgf-CK-Ttu" id="sAW-vr-Sqa"/>
@@ -114,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M2Y-va-npI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1253" y="642"/>
+            <point key="canvasLocation" x="2179.3893129770991" y="641.54929577464793"/>
         </scene>
         <!--Create Project View Controller-->
         <scene sceneID="ag1-06-70e">
@@ -165,7 +189,7 @@
                                         <buttonConfiguration key="configuration" style="plain" title="Create Project"/>
                                         <connections>
                                             <action selector="createProjectButtonTapped:" destination="p1X-mA-ZK7" eventType="touchUpInside" id="Etw-p9-jMX"/>
-                                            <segue destination="9Lp-0K-qM7" kind="show" identifier="MainViewCreate" id="GJp-4Z-s2h"/>
+                                            <segue destination="9Lp-0K-qM7" kind="show" identifier="MainViewCreate" id="hOP-xE-Jth"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -191,7 +215,29 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Ba-fH-dNG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2435.8778625954196" y="8.4507042253521139"/>
+            <point key="canvasLocation" x="3362.5954198473282" y="8.4507042253521139"/>
+        </scene>
+        <!--Trim View Controller-->
+        <scene sceneID="kdH-tn-iWf">
+            <objects>
+                <viewController title="Trim View Controller" id="6bo-lV-Rv6" customClass="TrimViewController" customModule="Zedit_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6NR-aI-xgJ">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9f3-WK-OWB">
+                                <rect key="frame" x="15" y="20" width="77" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5kz-YZ-QGS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eN6-pD-BJe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4333.5877862595416" y="872.53521126760563"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="k56-Ub-EUV">
@@ -211,7 +257,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="GJp-4Z-s2h"/>
+        <segue reference="v21-be-TDy"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
